fix credit alignment

--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -7,8 +7,8 @@
  * Author : LGS1920 Team
  * email: contact@lgs1920.fr
  *
- * Created on: 2025-06-28
- * Last modified: 2025-06-28
+ * Created on: 2025-07-01
+ * Last modified: 2025-07-01
  *
  *
  * Copyright © 2025 LGS1920
@@ -410,6 +410,9 @@ sl-drawer:not([placement="bottom"]):not([placement="top"]) sl-tab-panel::part(ba
     gap: var(--lgs-gutter-s);
 }
 
+.credits-pane-footer {
+    flex-direction: row !important;
+}
 
 /*******************************************************************************
  * Cards
